Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80037

Windows: WMF memory leak

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 5.14.2, 5.15.0 Beta1
    • 5.13.1
    • Multimedia
    • None
    • Windows
    • 12460a14bde44d1ff7bedd75bc87c7f22d096588 (qt/qtmultimedia/5.14) c39f90e01e51c9fbc8074993a38e7f9b16338dbb (qt/qtmultimedia/5.15)

    Description

      in MFPlayerSession::getStreamType(), the IMFMediaTypeHandler pointer is never released, leading to a memory leak.

      You will find a patch in attachment.

      Attachments

        For Gerrit Dashboard: QTBUG-80037
        # Subject Branch Project Status CR V

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            jirauser54756 user-3f449 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes