WMF: Fix memory leak in MFPlayerSession::getStreamType

Receives a pointer to the IMFMediaTypeHandler interface.
The caller must release the interface.

Fixes: QTBUG-80037
Change-Id: I69682028a5deea256a79d5d067afe2e60e49c8c5
Reviewed-by: Andy Shaw <andy.shaw@qt.io>